[tool.poetry]
name = "alx-interview"
version = "0.1.0"
description = ""
authors = ["Ian Duncan <76043277+dr8co@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "alx_interview"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
